k8s/postgres.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: northbridge
  labels: {app: postgres}
spec:
  selector: {app: postgres}
  ports:
    - name: pg
      port: 5432
      targetPort: 5432
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: postgres
  namespace: northbridge
  labels: {app: postgres}
spec:
  serviceName: postgres
  replicas: 1
  selector:
    matchLabels: {app: postgres}
  template:
    metadata:
      labels: {app: postgres}
    spec:
      securityContext:
        fsGroup: 999
      containers:
        - name: postgres
          image: pgvector/pgvector:pg16
          ports:
            - {name: pg, containerPort: 5432}
          readinessProbe:
            exec:
              command: ["sh", "-c", "pg_isready -U priorauth -d priorauth"]
            periodSeconds: 5
            timeoutSeconds: 3
            failureThreshold: 12
          livenessProbe:
            exec:
              command: ["sh", "-c", "pg_isready -U priorauth -d priorauth"]
            initialDelaySeconds: 30
            periodSeconds: 20
            timeoutSeconds: 5
          resources:
            requests: {cpu: 100m, memory: 256Mi}
            limits: {memory: 1Gi}
          volumeMounts:
            - {name: data, mountPath: /var/lib/postgresql/data}
  volumeClaimTemplates:
    - metadata:
        name: data
      spec:
        accessModes: ["ReadWriteOnce"]
        resources:
          requests: {storage: 2Gi}
